src/App.css
/* FONT */

@font-face {
  font-family: "Graphik";
  src: url("./assets/fonts/Graphik-Regular-Trial.otf") format("opentype");
  font-weight: 400;
}

@font-face {
  font-family: "Graphik";
  src: url("./assets/fonts/Graphik-Bold-Trial.otf") format("opentype");
  font-weight: 700;
}

@font-face {
  font-family: "Graphik";
  src: url("./assets/fonts/Graphik-Black-Trial.otf") format("opentype");
  font-weight: 900;
}

body {
  margin: 0;
  font-family: "Graphik", Arial, sans-serif;
  background-color: #ffffff;
}


/* GLOBAL */

.container {
  max-width: 1200px;
  margin: 0 auto;
  margin-left: 60px;
  padding: 0 20px;
}

main {
  margin-top: 70px;
}

section {
  margin-bottom: 90px;
}


/* HEADER */

header {
  background: white;
  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.08);
}

.header-top {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo {
  height: 160px;
  margin-left: 0;
}

/* DROITE */

.right-header {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  gap: 12px;
  margin-right: 60px;
}

/* Recherche */

.search {
  position: relative;
  width: 240px;
  margin-bottom: 20px;
}

.search input {
  width: 100%;
  border: 0;
  outline: 0;
  background: transparent;
  padding: 6px 30px 6px 0;
  font-size: 15px;
  color: #555;
  letter-spacing: 0,7px;

}

.search::before {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  height: 1px;
  width: calc(100% - 1px);
  background: #0074c7;
}

.search::after {
  content: "";
  position: absolute;
  right: 0;
  bottom: 0;
  width: 1px;
  height: 100%;
  background-color: #0074c7;
}

.loupe {
  position: absolute;
  right: 17px;
  top: 6px;
  width: 14px;
}

/* MENU */

.menu {
  display: flex;
  gap: 30px; 
}

.menu a {
  text-decoration: 0;
  color: #444;
  font-size: 16px;
}

.menu a:hover {
  color: #0074c7;
}

ul, li {
  list-style: none !important;
}

/* TITRES */

.title-block {
  position: relative;
  margin-top: 60px;
  margin-bottom: 30px;
}

.title-block::before {
  content: "";
  width: 30px;
  height: 4px;
  position: absolute;
  top: -10px;
  left: 0;
}

.title-block.blue::before {
  background: #0074c7;
}

.title-block.green::before {
  background: #82b864;
}

h1 {
  font-weight: 700;
}

h2 {
  font-size: 28px;
  font-weight: 700;
  color: #00497c;
  margin: 0;
}

h3 {
  font-weight: 600;
}


/* STEPS */

.steps {
  display: flex;
  gap: 60px;
  margin-top: 40px;
}

.step {
  width: 150px;
  height: 120px;
  background: #e9eff5;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 20px;
  font-size: 14px;
}

.step strong {
  margin-bottom: 5px;
  color: #00497c;
}

.step p {
  color: #0074c7 ;
  margin: 0;
}


/* CARDS */

.cards {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 10px;
  margin-top: 40px;
}

.card {
  background: white;
  border: 1px solid #ddd;
  padding: 25px;
  width: 260px;
}

.card h4 {
  font-size: 18px;
  font-weight: 700;
  color: #0074c7;
  margin-bottom: 5px;
}

.card p {
  margin: 4px 0;
}

.star.full {
  color: #000;
}

.star.empty {
  color: #ccc;
}

.stars {
  letter-spacing: 2px;
  margin: 5px 0;
}

.card .link {
  text-decoration: none;
  color: #0074c7;
  font-weight: 700;
  margin-top: 5px;
}


/* FORM */

.form {
  display: flex;
  flex-direction: column;
  max-width: 300px;
}

.form input,
.form textarea {
  margin-bottom: 10px;
  padding: 8px;
}


/* BUTTON */

button {
  padding: 10px;
  background: #0074c7;
  color: white;
  border: none;
  cursor: pointer;
}


/* FOOTER */

footer {
  background: #1f6fb2;
  color: white;
  padding: 40px 20px;
  margin-top: 60px;
  text-align: center;
}

footer div {
  display: flex;
  justify-content: center;
  gap: 20px;
  flex-wrap: wrap;
  margin-top: 15px;
}

footer p {
  margin: 5px 0;
}

.footer-city {
  font-weight: 700;
  color: white;
}


/* RESPONSIVE */

/* TABLET */
@media (max-width: 900px) {
  .steps {
    flex-wrap: wrap;
  }

  .step {
    width: 45%;
  }

  .cards {
    flex-wrap: wrap;
  }

  .card {
    width: 45%;
  }
}


/* MOBILE */
@media (max-width: 600px) {
  .header-top {
    flex-direction: column;
    align-items: flex-start;
  }

  .right-header {
    width: 100%;
    margin-top: 10px;
  }

  .steps {
    flex-direction: column;
  }

  .cards {
    flex-direction: column;
  }

  .card {
    width: 100%;
  }
}

